Fixing header z-index.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,7 @@ div#header {
     height: 162px;
     position: relative;
     text-align: center;
-    z-index: 2;
+    z-index: 3;
 }
 
 div#header img {
